--- a/certify/src/App.css
+++ b/certify/src/App.css
@@ -3,6 +3,10 @@
   border-radius: 0 !important;
 }
 
+a {
+  cursor: pointer;
+}
+
 btn-primary {
   background-color: #00509D !important;
   color: #ffffff !important;
@@ -47,11 +51,6 @@ btn-secondary {
   color: black;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-
-.btn {
-  margin-right: 10px;
-}
-
 /* Navbar home */
 
 /* Landing page */
@@ -203,10 +202,13 @@ h5 {
   }
 
   .recipient-tab {
-    margin-top: 80px;
+    margin-top: 50px;
 }
 
 .action-btn a {
   margin: 0 5px;
   font-size: 20px;
+}
+.form-control-sm {
+  width: 170px;
 }
