--- a/certify/src/App.css
+++ b/certify/src/App.css
@@ -204,6 +204,15 @@ h5 {
     padding: 20px 30px;
   }
 
+  .upload-cont form {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .upload-cont input {
+    width: 60%;
+  }
+
   .recipient {
     padding: 40px 0;
   }
@@ -290,6 +299,14 @@ button.btn-large {
   justify-content: space-between;
   align-items: center;
   flex-direction: row;
+}
+
+.banner-img {
+  width: 45%;
+}
+
+.banner-img img {
+  max-height: 100%;
 }
 
 .card-desc {
