styling some component

--- a/certify/src/App.css
+++ b/certify/src/App.css
@@ -328,3 +328,9 @@ button.btn-large {
 }
 
 /* Information event ends */
+/* Validation  */
+.validation-cont {
+  padding: 120px 50px;
+}
+
+/* Validation ends */
