--- a/certify/src/App.css
+++ b/certify/src/App.css
@@ -294,23 +294,24 @@ button.btn-large {
 .info-card {
   margin: 0 auto;
   width: 100%;
-  padding: 30px 40px;
+  padding: 20px 10px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   flex-direction: row;
 }
 
-.banner-img {
-  width: 45%;
-}
+/* .banner-img {
+  max-width: 45%;
+} */
 
 .banner-img img {
-  max-height: 100%;
+  width: 100%;
+  height: auto;
 }
 
 .card-desc {
-  margin-left: 50px;
+  margin-top: 30px;
   display: flex;
   flex-direction: row;
   width: 60%;
@@ -320,7 +321,7 @@ button.btn-large {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  margin: 0 30px;
+  margin: 0 10px;
 }
 
 .card-col .bolder {
