--- a/certify/src/App.css
+++ b/certify/src/App.css
@@ -8,14 +8,14 @@ a {
 }
 
 btn-primary {
-  background-color: #00509D !important;
+  background-color: #00509d !important;
   color: #ffffff !important;
 }
 
 btn-secondary {
   background-color: #ffffff !important;
-  color: #00509D !important;
-  border: 1px solid #00509D !important;
+  color: #00509d !important;
+  border: 1px solid #00509d !important;
 }
 
 .full-width {
@@ -60,7 +60,8 @@ section {
   margin: 0 20px;
   text-decoration: none;
   color: black;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 /* Navbar home */
 
@@ -88,19 +89,19 @@ section {
   margin: 20px 40px;
   width: 400px;
   padding: 60px 40px;
-  background-color: #A9D0F5;
+  background-color: #a9d0f5;
 }
 
 .register,
 .login {
-  background-color: #F3F3F3;
+  background-color: #f3f3f3;
 }
 
 /* Register/Login ends */
 
 /* Navbar dashboard */
 #navbar-dashboard {
-  background-color: #00509D;
+  background-color: #00509d;
   color: #ffff;
   padding-left: 80px;
   text-align: center;
@@ -130,7 +131,7 @@ h5 {
 }
 
 .events {
-  background-color: #E5E5E5;
+  background-color: #e5e5e5;
   /* bisa dibalik sama warna background */
   padding: 15px;
 }
@@ -151,74 +152,74 @@ h5 {
 
 /* Navbar certificate*/
 #navbar-certificate {
-  background-color: #A9D0F5;
-  color: #00509D;
+  background-color: #a9d0f5;
+  color: #00509d;
   text-align: center;
   padding-left: 80px;
-  }
+}
 
-  #navbar-certificate a {
-    color: #00509D;
-    margin-left: 50px;
-  }
+#navbar-certificate a {
+  color: #00509d;
+  margin-left: 50px;
+}
 
-  #navbar-certificate button {
-    margin-right: 80px;
-  }
+#navbar-certificate button {
+  margin-right: 80px;
+}
 
-  /* Navbar certificate ends*/
+/* Navbar certificate ends*/
 
-  /* Event information */
-  .container-eventInformation {
-    margin: 30px;
-    background-color: #E5E5E5;
-    /* bisa dibalik sama warna background */
-    padding: 50px;
-    padding-left: 80px;
-    padding-right: 80px;
-  }
+/* Event information */
+.container-eventInformation {
+  margin: 30px;
+  background-color: #e5e5e5;
+  /* bisa dibalik sama warna background */
+  padding: 50px;
+  padding-left: 80px;
+  padding-right: 80px;
+}
 
-  .container-eventInformation .one {
-    margin-top: 50px;
-  }
+.container-eventInformation .one {
+  margin-top: 50px;
+}
 
-  /* Event information ends */
+/* Event information ends */
 
-  /* Create event */
-  .create-event {
-    background-color: #A9D0F5;
-  }
+/* Create event */
+.create-event {
+  background-color: #a9d0f5;
+}
 
-  /* Create event ends*/
+/* Create event ends*/
 
-  /* Edit event */
-  .edit-event {
-    background-color: #A9D0F5;
-  }
+/* Edit event */
+.edit-event {
+  background-color: #a9d0f5;
+}
 
-  /* Edit event ends */
+/* Edit event ends */
 
-  /* Recipient */
-  .upload-cont {
-    width: 500px;
-    padding: 20px 30px;
-  }
+/* Recipient */
+.upload-cont {
+  width: 500px;
+  padding: 20px 30px;
+}
 
-  .upload-cont form {
-    display: flex;
-    justify-content: space-between;
-  }
+.upload-cont form {
+  display: flex;
+  justify-content: space-between;
+}
 
-  .upload-cont input {
-    width: 60%;
-  }
+.upload-cont input {
+  width: 60%;
+}
 
-  .recipient {
-    padding: 40px 0;
-  }
+.recipient {
+  padding: 40px 0;
+}
 
-  .recipient-tab {
-    margin-top: 50px;
+.recipient-tab {
+  margin-top: 50px;
 }
 
 .action-btn a {
@@ -337,6 +338,14 @@ button.btn-large {
 /* Validation  */
 .validation-cont {
   padding: 120px 50px;
+}
+
+.navbar-validate {
+  flex: 1;
+  flex-direction: row;
+  justify-content: space-between;
+  height: 50px;
+  /* position: absolute; */
 }
 
 /* Validation ends */
