--- a/certify/src/App.css
+++ b/certify/src/App.css
@@ -358,12 +358,36 @@ button.btn-large {
   padding: 120px 50px;
 }
 
+.validation-cont .badge {
+  margin-top: 15px;
+  padding: 5px 15px;
+  color: #00509d;
+  background-color: #a9d0f5 !important;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  font-weight: 600;
+  border-radius: 50px;
+}
+
+.validation-cont td {
+  padding: 5px 0;
+}
+
 .navbar-validate {
   flex: 1;
   flex-direction: row;
   justify-content: space-between;
   height: 50px;
   /* position: absolute; */
+}
+
+.validate-col {
+  display: flex;
+  flex-direction: column !important;
+  align-items: start;
+  justify-content: flex-start;
 }
 
 /* Validation ends */
