--- a/certify/src/App.css
+++ b/certify/src/App.css
@@ -250,6 +250,10 @@ h5 {
 /* Recipient end */
 
 /* Template */
+section.template {
+  display: flex;
+  flex-direction: column;
+}
 .template-cont {
   margin: 30px 40px;
   padding: 80px 30px;
@@ -391,3 +395,53 @@ button.btn-large {
 }
 
 /* Validation ends */
+
+/* STEP  */
+.tips-cont {
+  width: 70%;
+  margin: 40px 0;
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.tips-cont .row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 700px;
+}
+
+.tips-cont .col {
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 15px;
+}
+
+.tips-cont .title {
+  font-weight: 700;
+  height: 40px;
+}
+
+.tips-cont .img {
+  height: 90px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.tips-cont .title {
+  margin: 20px 10px;
+  text-align: center;
+}
+
+.tips-cont .desc {
+  height: 140px;
+}
+
+/* STEP ENDS */
